--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
 <body>
     <header>
         <nav> 
-            
             <ul class="nav">
                 <img src="img/logo.svg" alt="logo" class="logo">
                 <li class="li1"><a>HOME</a></li>
-                <li class="li2"><a></a>ABOUT US</li>
-                <li class="li3">OUR SERVICES</li>
-                <li class="li4">TOUR PACKAGE</li>
+                <li class="li2"><a>ABOUT US</a></li>
+                <li class="li3"><a>OUR SERVICES</a></li>
+                <li class="li4"><a>TOUR PACKAGE</a></li>
             </ul>
         </nav>
+       <div class="header">
+        <div class="headertxt">
+        <h1 class="headerh">Discover Greece</h1>
+        <p class="headerp">TRAVEL WITH UNIQUE EXPERIENCE</p>
+        </div>
+        <img src="img/header.png" alt="header" class="headerimg">
+       </div>
     </header>
     <main></main>
 </body>
