--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
-        <nav> 
+        <nav>
             <ul class="nav">
                 <img src="img/logo.svg" alt="logo" class="logo">
                 <li class="li1"><a>HOME</a></li>
@@ -16,14 +18,75 @@
                 <li class="li4"><a>TOUR PACKAGE</a></li>
             </ul>
         </nav>
-       <div class="header">
-        <div class="headertxt">
-        <h1 class="headerh">Discover Greece</h1>
-        <p class="headerp">TRAVEL WITH UNIQUE EXPERIENCE</p>
+        <div class="header">
+            <div class="headertxt">
+                <h1 class="headerh">Discover Greece</h1>
+                <p class="headerp">TRAVEL WITH UNIQUE EXPERIENCE</p>
+            </div>
+            <img src="img/header.png" alt="header" class="headerimg">
         </div>
-        <img src="img/header.png" alt="header" class="headerimg">
-       </div>
     </header>
-    <main></main>
+    <main>
+        <div class="main">
+            <section class="left-section">
+                <div class="leftdiv">
+                    <p>DISCOVER</p>
+                    <h1>Our Hot Services</h1>
+                    <p class="mainp">We hope you can visit and
+                        ths beautiful places with
+                        your friend and favorite
+                        So you can share your
+                        feedback to us</p>
+                </div>
+            </section>
+            <section class="right-section">
+                <div class="mainright">
+                    <div>
+                        <img src="img/mainp1.svg" alt="p1">
+                        <h1>FLIGHT BOOKING</h1>
+                        <p>We hope you can visit and enjoy it
+                            ths beautiful places with your
+                            friend and favorite people</p>
+                    </div>
+                    <div>
+                        <img src="img/mainp2.svg" alt="p2">
+                        <h1>HOTEL & RESORT BOOKING</h1>
+                        <p>We hope you can visit and enjoy it
+                            ths beautiful places with your
+                            friend and favorite people</p>
+                    </div>
+                    <div>
+                        <img src="img/mianp3.svg" alt="p3">
+                        <h1>FAMILY TRIP PLANNER</h1>
+                        <p>We hope you can visit and enjoy it
+                            ths beautiful places with your
+                            friend and favorite people</p>
+                    </div>
+                    <div>
+                        <img src="img/mainp4.svg" alt="p4">
+                        <h1>CRUISE TOUR</h1>
+                        <p>We hope you can visit and enjoy it
+                            ths beautiful places with your
+                            friend and favorite people</p>
+                    </div>
+                    <div>
+                        <img src="img/mainp5.svg" alt="p5">
+                        <h1>FIRE CAMP</h1>
+                        <p>We hope you can visit and enjoy it
+                            ths beautiful places with your
+                            friend and favorite people</p>
+                    </div>
+                    <div>
+                        <img src="img/mainp6.svg" alt="p6">
+                        <h1>CORPORATE HOLYDAYS</h1>
+                        <p>We hope you can visit and enjoy it
+                            ths beautiful places with your
+                            friend and favorite people</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
 </body>
+
 </html>
